hphp/hack/test/typecheck/tconst/unsupported_this1.php.exp
File "unsupported_this1.php", line 3, characters 23-26:
The type "this" can only be used as a return type, to instantiate a covariant type variable, or as a private non-static member variable (Naming[2043])
